SHRI KHEMISATI PLASPACK LLP replace

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
       <div class="carousel-item active">
         <img src="{% static 'images/banner14.jpg' %}" class="d-block w-100" alt="Banner">
         <div class="carousel-caption d-none d-md-block">
-          <h1 class="display-5">Welcome To ALPINE FIBC PVT.LTD.</h1>
+          <h1 class="display-5">Welcome To SHRI KHEMISATI PLASPACK LLP.</h1>
           <p class="lead">Leading manufacturer and exporter of a wide range of FIBC/Big Bags.</p>
         </div>
       </div>
@@ -138,9 +138,9 @@
     <div class="row align-items-center">
       <!-- Left Text Column -->
       <div class="col-lg-8 mb-4 mb-lg-0">
-        <h5 class="text-primary fw-bold">WELCOME TO ALPINE FIBC PVT.LTD.</h5>
+        <h5 class="text-primary fw-bold">WELCOME TO SHRI KHEMISATI PLASPACK LLP.</h5>
         <p>
-          <strong>ALPINE FIBC PVT.LTD.</strong> is one of the leading manufacturer and exporter of a wide range of FIBC/Big Bags and <strong>Food Grade</strong> FIBC like Builder bags, 
+          <strong>SHRI KHEMISATI PLASPACK LLP.</strong> is one of the leading manufacturer and exporter of a wide range of FIBC/Big Bags and <strong>Food Grade</strong> FIBC like Builder bags, 
           <strong>4 Panel bags</strong>, U Panel bags, Circular bags, <strong>Baffle bags</strong>, UN Certified bags, On-Two Loop bags, Ventilated bags, Container Liner bags, 
           BOPP Baffle bags, Gambo bags, Tie Baffle & Net Baffle bags, Asbestos bags, Garden bags, Fall Arrest bags, Reel bags, (Roll packing), Ez Opening bags, Perforated Liner bags, 
           Sling bags, Helicoptor bags, Stretch Hood and PP Woven Sack, Spiral Tubing, Multifilament Yarn, Tarpaulins, Ground Covers, PP Woven Fabrics.
@@ -284,7 +284,7 @@
       <!-- Global Reach -->
       <div class="col-md-4 mb-4 mb-md-0">
         <h6 class="text-primary fw-bold">GLOBAL REACH</h6>
-        <p>Alpine FIBC Pvt Ltd is a leading <span class="fw-semibold text-primary">big bag</span> exporter in India who never cease to grow since its establishment. Our worldwide network provides customers with cost effective manufacturing options and dependable international and domestic delivery.</p>
+        <p>SHRI KHEMISATI PLASPACK LLP is a leading <span class="fw-semibold text-primary">big bag</span> exporter in India who never cease to grow since its establishment. Our worldwide network provides customers with cost effective manufacturing options and dependable international and domestic delivery.</p>
       </div>
 
       <!-- Location Map -->
