SHRI KHEMISATI replace

--- a/templates/about.html
+++ b/templates/about.html
@@ -23,7 +23,7 @@
     <!-- Description -->
     <div class="text-justify">
       <p>
-        <strong><a href="https://www.alpinefibc.com/about-us/" class="text-decoration-none">ALPINE FIBC PVT.LTD.</a></strong>
+        <strong><a href="https://www.alpinefibc.com/about-us/" class="text-decoration-none">SHRI KHEMISATI PLASPACK LLP.</a></strong>
         is one of the leading manufacturers and exporters of a wide range of FIBC/Big Bags and 
         <strong><a href="https://www.alpinefibc.com/food-grade-fibc-bags/" target="_blank" class="text-decoration-none">Food Grade</a></strong>
         FIBC like Builder bags, 
