--- a/templates/blog.html
+++ b/templates/blog.html
@@ -69,7 +69,7 @@
         <li class="list-group-item">
           <h6 class="fw-bold">Reduced Packaging Waste</h6>
           <p>Using FIBCs eliminates the need for single-use, disposable packaging, contributing to a more sustainable supply chain.</p>
-          <p>At Alpine we strive to provide the best packaging solutions for all your storage &amp; transport/shipping needs with customization. We have been servicing varied industries across the globe with tailor made FIBC solutions with all the International Certifications.</p>
+          <p>At SHRI KHEMISATI we strive to provide the best packaging solutions for all your storage &amp; transport/shipping needs with customization. We have been servicing varied industries across the globe with tailor made FIBC solutions with all the International Certifications.</p>
         </li>
       </ul>
     </div>
