--- a/templates/career.html
+++ b/templates/career.html
@@ -9,10 +9,10 @@
     <h1 class="text-center mb-4">CAREER</h1>
     <hr class="mb-4">
     <p>
-      The driving force behind the success of <strong>ALPINE FIBC PVT.LTD</strong> is its team of like-minded, young, and experienced professionals, bound together by a culture of excellence. Wherever they are, whatever they do, a <strong>ALPINE FIBC PVT.LTD</strong> team member stands for the commitment to make a difference, and through his work, be a source of pride to his country, his company, his family, and above all, to himself.
+      The driving force behind the success of <strong>SHRI KHEMISATI PLASPACK LLP</strong> is its team of like-minded, young, and experienced professionals, bound together by a culture of excellence. Wherever they are, whatever they do, a <strong>SHRI KHEMISATI PLASPACK LLP</strong> team member stands for the commitment to make a difference, and through his work, be a source of pride to his country, his company, his family, and above all, to himself.
     </p>
     <p>
-      Career at <strong>ALPINE FIBC PVT.LTD</strong> is driven by a professional approach offering each individual a challenging career rather than a job. We ensure development of our members through training & exposure, engagement & involvement, installing our value system in them and fostering the culture of accountability, quality, and winning.
+      Career at <strong>SHRI KHEMISATI PLASPACK LLP</strong> is driven by a professional approach offering each individual a challenging career rather than a job. We ensure development of our members through training & exposure, engagement & involvement, installing our value system in them and fostering the culture of accountability, quality, and winning.
     </p>
   </div>
 </section>
