--- a/templates/contact.html
+++ b/templates/contact.html
@@ -22,7 +22,7 @@
     <div class="row text-center mb-5">
       <div class="col-md-4">
         <h5>Registered Office</h5>
-        <p>Alpine FIBC Pvt Ltd<br>A 1206-1207, “The Capital”, Nr Hetarth Party Plot, Science City Road, Sola, Ahmedabad–380060</p>
+        <p>SHRI KHEMISATI PLASPACK LLP<br>A 1206-1207, “The Capital”, Nr Hetarth Party Plot, Science City Road, Sola, Ahmedabad–380060</p>
       </div>
       <div class="col-md-4">
         <h5>Factory Address</h5>
