--- a/templates/fibc-liners.html
+++ b/templates/fibc-liners.html
@@ -12,7 +12,7 @@
         <h1 class="text-dark fw-bold mb-3">Liners for FIBC</h1>
         <p>Loose, Glued, Tabbed, Stitched Liners, EVOH Liner, Baffle Liner, Aluminum, Foil liner, Conductive, Antistatic liner</p>
         <p>A bulk bag can be fitted with an inner bag, which we call a liner. This liner provides additional protective properties against air and water vapor migration and the effect of light.</p>
-        <p><strong>Alpine FIBC</strong> can manufacture liners in the following materials: LDPE, LLDPE, MDPE, HDPE, PA, EVOH or aluminium.</p>
+        <p><strong>SHRI KHEMISATI </strong> can manufacture liners in the following materials: LDPE, LLDPE, MDPE, HDPE, PA, EVOH or aluminium.</p>
         <a href="contact.html" class="btn btn-primary mt-3">Send Inquiry</a>
       </div>
 
