--- a/templates/food-grade-fibc-bags.html
+++ b/templates/food-grade-fibc-bags.html
@@ -10,9 +10,9 @@
       <!-- Left Side: Text Content -->
       <div class="col-lg-7 mb-4 mb-lg-0">
         <h1 class="text-dark fw-bold mb-3">Food Grade FIBC</h1>
-      <p><strong>Alpine FIBC</strong> are one of the leading manufacturers and suppliers of a wide range of food grade FIBC bags with international standards clean room facility, most advanced machinery, well-equipped quality control laboratory, and highly experienced expert staff. We use only approved superior food grade polymers and other additive materials.</p>
+      <p><strong>SHRI KHEMISATI </strong> are one of the leading manufacturers and suppliers of a wide range of food grade FIBC bags with international standards clean room facility, most advanced machinery, well-equipped quality control laboratory, and highly experienced expert staff. We use only approved superior food grade polymers and other additive materials.</p>
 
-        <p><strong>Alpine FIBC</strong> is a BRC certified company. Our food grade bags are free from dust, germs, and pollutants due to 5% statistical quality control inspection after palletizing. We ensure vacuum cleaning and pallet shrink wrapping for all food grade bags.</p>
+        <p><strong>SHRI KHEMISATI </strong> is a BRC certified company. Our food grade bags are free from dust, germs, and pollutants due to 5% statistical quality control inspection after palletizing. We ensure vacuum cleaning and pallet shrink wrapping for all food grade bags.</p>
 
         <p>With our expertise in producing the highest quality food grade FIBC bags, and our strict hygiene policy, we successfully fulfill customer requirements with confidence and consistency.</p>
         <a href="contact.html" class="btn btn-primary mt-3">Send Inquiry</a>
