--- a/templates/quality.html
+++ b/templates/quality.html
@@ -26,7 +26,7 @@
       <h2 class="mb-3">QUALITY</h2>
       <div class="double-line mb-4"></div>
       <p><strong>Quality of our products and Service satisfaction of our customer is our prime focus.</strong></p>
-      <p><strong>Alpine FIBC</strong> maintain quality right from the selection of raw material to the final delivery, the Quality Assurance team ensures that product meet all the required quality standards followed at each and every stage.</p>
+      <p><strong>SHRI KHEMISATIFIBC</strong> maintain quality right from the selection of raw material to the final delivery, the Quality Assurance team ensures that product meet all the required quality standards followed at each and every stage.</p>
       <p>We focus on hygiene and cleanliness to ensure Food and <strong>Pharma grade FIBCs</strong> that are sanitized and free from dust, germs and pollutants.</p>
 
       <p class="fw-bold">At different levels of manufacturing process, our in-house “Quality Assurance System” strictly follows:</p>
