--- a/templates/un-fibc-bags.html
+++ b/templates/un-fibc-bags.html
@@ -23,9 +23,9 @@
     <div class="col-md-9 mb-4 mb-md-0">
 <p>These special bags are designed specifically for the transportation of dangerous materials. Our UN bags are manufactured and tested according to the guidelines set forth in the “United Nations Recommendations on the Transportation of Dangerous Goods (Orange Book).”</p>
 
-<p>To ensure compliance with international regulations for transport by sea, rail, and road, Alpine FIBC develops and produces high-quality UN bags using advanced technical equipment and a skilled, efficient workforce.</p>
+<p>To ensure compliance with international regulations for transport by sea, rail, and road, SHRI KHEMISATI  develops and produces high-quality UN bags using advanced technical equipment and a skilled, efficient workforce.</p>
 
-<p>Alpine FIBC bags fully comply with all UN FIBC requirements. The testing protocols mandated by the UN include the Top Lift Test, Drop Test, Righting Test, Tear Test, and Stacking Test. These tests are initially conducted in our in-house laboratories and then repeated at independent testing facilities to obtain official certification.</p>
+<p>SHRI KHEMISATI  bags fully comply with all UN FIBC requirements. The testing protocols mandated by the UN include the Top Lift Test, Drop Test, Righting Test, Tear Test, and Stacking Test. These tests are initially conducted in our in-house laboratories and then repeated at independent testing facilities to obtain official certification.</p>
     </div>
 
     <!-- Image -->
