certificate add footer

--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -6,7 +6,14 @@
       <!-- Certification -->
       <div class="col-md-4 mb-4">
         <h6 class="text-uppercase fw-bold mb-3">Certification</h6>
-        <img src="{% static 'images/certificate.png' %}" alt="Certification" class="img-fluid">
+        <div class="d-flex overflow-auto gap-2 pb-2">
+          <img src="{% static 'images/certificate1.png' %}" alt="Certificate 1" class="img-fluid" style="max-height: 80px;">
+          <img src="{% static 'images/certificate2.png' %}" alt="Certificate 2" class="img-fluid" style="max-height: 80px;">
+          <img src="{% static 'images/certificate3.png' %}" alt="Certificate 3" class="img-fluid" style="max-height: 80px;">
+          <img src="{% static 'images/certificate4.png' %}" alt="Certificate 4" class="img-fluid" style="max-height: 80px;">
+          <img src="{% static 'images/certificate5.png' %}" alt="Certificate 5" class="img-fluid" style="max-height: 80px;">
+          <img src="{% static 'images/certificate6.png' %}" alt="Certificate 6" class="img-fluid" style="max-height: 80px;">
+        </div>
       </div>
 
       <!-- Main Menu -->
@@ -47,4 +54,3 @@
     </div>
   </div>
 </footer>
-
