--- a/templates/base/headernsidebar.html
+++ b/templates/base/headernsidebar.html
@@ -31,6 +31,7 @@
       <img src="{% static 'images/logoo.webp' %}" alt="Alpine FIBC" height="60" class="me-2">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
