--- a/templates/index.html
+++ b/templates/index.html
@@ -154,10 +154,11 @@
       <!-- Right Video Column -->
 <div class="col-lg-4">
   <h6 class="text-primary fw-bold">COMPANY PROFILE</h6>
-<a href="https://alpline.biz499.com/pdf/broc.pdf" target="_blank">
+  <a href="{% static 'pdf/broc.pdf' %}" target="_blank">
     <img src="{% static 'images/brovhure_thumb.PNG' %}" alt="broc.PDF Thumbnail" class="img-fluid rounded shadow-sm">
   </a>
 </div>
+
     </div>
   </div>
 </section>
