--- a/templates/base/headernsidebar.html
+++ b/templates/base/headernsidebar.html
@@ -28,7 +28,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
   <div class="container">
     <a class="navbar-brand" href="{% url 'home' %}">
-      <img src="{% static 'images/logoo.webp' %}" alt="Alpine FIBC" height="60" class="me-2">
+      <img src="{% static 'images/shri.webp' %}" alt="Alpine FIBC" height="60" class="me-2">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
