--- a/templates/index.html
+++ b/templates/index.html
@@ -168,23 +168,25 @@
     <h5 class="text-primary fw-bold mb-4">PRODUCTS</h5>
     <div class="row g-4">
       <!-- Product 1 -->
-      <div class="col-md-3 col-6">
-        <div class="border p-2 h-100 bg-white text-center">
-        <a href="circular-fibc.html" class="text-decoration-none">
-          <img src="{% static 'images/products/CIRCULAR-FIBC.jpg' %}" class="img-fluid mb-2" alt="CIRCULAR-FIBC">
-          <div class="bg-primary text-white py-2 fw-semibold">CIRCULAR-FIBC</div>
-        </div>
-        </a>
-      </div>
-      <!-- Product 2 -->
-      <div class="col-md-3 col-6">
-        <div class="border p-2 h-100 bg-white text-center">
-        <a href="conductive-fibc-bags.html" class="text-decoration-none">
-          <img src="{% static 'images/products/CONDUCTIVE-FIBC.jpg' %}" class="img-fluid mb-2" alt="CONDUCTIVE-FIBC">
-          <div class="bg-primary text-white py-2 fw-semibold">CONDUCTIVE-FIBC</div>
-        </div>
-        </a>
-      </div>
+<div class="col-md-3 col-6">
+  <div class="border p-2 h-100 bg-white text-center">
+    <a href="circular-fibc.html" class="text-decoration-none">
+      <img src="{% static 'images/products/CIRCULAR-FIBC.jpg' %}" class="img-fluid mb-2 product-img" alt="CIRCULAR-FIBC">
+      <div class="bg-primary text-white py-2 fw-semibold">CIRCULAR-FIBC</div>
+    </a>
+  </div>
+</div>
+
+<!-- Product 2 -->
+<div class="col-md-3 col-6">
+  <div class="border p-2 h-100 bg-white text-center">
+    <a href="conductive-fibc-bags.html" class="text-decoration-none">
+      <img src="{% static 'images/products/CONDUCTIVE-FIBC.jpg' %}" class="img-fluid mb-2 product-img" alt="CONDUCTIVE-FIBC">
+      <div class="bg-primary text-white py-2 fw-semibold">CONDUCTIVE-FIBC</div>
+    </a>
+  </div>
+</div>
+
       <!-- Product 3 -->
       <div class="col-md-3 col-6">
         <div class="border p-2 h-100 bg-white text-center">
