--- a/templates/index.html
+++ b/templates/index.html
@@ -266,15 +266,16 @@
         </div>
         </a>
       </div>
-      <!-- Product 12 -->
-      <div class="col-md-3 col-6">
-        <div class="border p-2 h-100 bg-white text-center">
-         <a href="baffle-fibc-bags.html" class="text-decoration-none">
-        <img src="{% static 'images/products/BAFFLE-FIBC.jpg' %}" class="img-fluid mb-2" alt="BAFFLE-FIBC">
-          <div class="bg-primary text-white py-2 fw-semibold">BAFFLE-FIBC</div>
-        </div>
-        </a>
-      </div>
+     <!-- Product 12 -->
+<div class="col-md-3 col-6">
+  <div class="border p-2 h-100 bg-white text-center">
+    <a href="baffle-fibc-bags.html" class="text-decoration-none d-block">
+      <img src="{% static 'images/products/BAFFLE-FIBC.jpg' %}" class="img-fluid mb-2" alt="BAFFLE-FIBC">
+      <div class="bg-primary text-white py-2 fw-semibold">BAFFLE-FIBC</div>
+    </a>
+  </div>
+</div>
+
     </div>
   </div>
 </section>
