--- a/templates/pp-woven-ground-cover.html
+++ b/templates/pp-woven-ground-cover.html
@@ -40,20 +40,20 @@
 
     </div>
     <div class="col-md-3">
-      <img src="images/PP-GROUND-COVER.jpg" alt="PP GROUND COVER" class="img-fluid mb-3">
+      <img src="{% static 'images/PP-GROUND-COVER.jpg' %}" alt="PP GROUND COVER" class="img-fluid mb-3">
       <div class="row row-cols-2 g-2">
-        <div class="col"><img src="images/PP-WOVEN-GROUND-COVER.jpg" alt="PP WOVEN GROUND COVER" class="img-fluid"></div>
+        <div class="col"><img src="{% static 'images/PP-WOVEN-GROUND-COVER.jpg' %}" alt="PP WOVEN GROUND COVER" class="img-fluid"></div>
         <div class="bg-primary text-white py-2 fw-semibold">PP WOVEN GROUND COVER</div>
-        <div class="col"><img src="images/PP-WOVEN-GROUND-COVER1.jpg" alt="PP WOVEN GROUND COVER1" class="img-fluid"></div>
+        <div class="col"><img src="{% static 'images/PP-WOVEN-GROUND-COVER1.jpg' %}" alt="PP WOVEN GROUND COVER1" class="img-fluid"></div>
                   <div class="bg-primary text-white py-2 fw-semibold">PP WOVEN GROUND COVER</div>
 
-        <div class="col"><img src="images/PP-WOVEN-GROUND-COVER2.jpg" alt="PP WOVEN GROUND COVER2" class="img-fluid"></div>
+        <div class="col"><img src="{% static 'images/PP-WOVEN-GROUND-COVER2.jpg' %}" alt="PP WOVEN GROUND COVER2" class="img-fluid"></div>
                   <div class="bg-primary text-white py-2 fw-semibold">PP WOVEN GROUND COVER</div>
 
-        <div class="col"><img src="images/PP-WOVEN-GROUND-COVER3.jpg" alt="PP WOVEN GROUND COVER3" class="img-fluid"></div>
+        <div class="col"><img src="{% static 'images/PP-WOVEN-GROUND-COVER3.jpg' %}" alt="PP WOVEN GROUND COVER3" class="img-fluid"></div>
                   <div class="bg-primary text-white py-2 fw-semibold">PP WOVEN GROUND COVER</div>
 
-        <div class="col"><img src="images/PP-WOVEN-GROUND-COVER4.jpg" alt="PP WOVEN GROUND COVER4" class="img-fluid"></div>
+        <div class="col"><img src="{% static 'images/PP-WOVEN-GROUND-COVER4.jpg' %}" alt="PP WOVEN GROUND COVER4" class="img-fluid"></div>
                   <div class="bg-primary text-white py-2 fw-semibold">PP WOVEN GROUND COVER</div>
 
       </div>
@@ -79,33 +79,33 @@
   <div class="tab-pane fade show active" id="lifting" role="tabpanel">
     <div class="row text-center g-3">
       <div class="col-6 col-md-2">
-        <img src="images/lifting/ancillary.jpg" class="img-fluid">
+        <img src="{% static 'images/lifting/ancillary.jpg' %}" class="img-fluid">
         <p class="mt-2">Discharge Spout with Protection Flap</p>
       </div>
       <div class="col-6 col-md-2">
-        <img src="images/lifting/cross-corner.jpg" class="img-fluid">
+        <img src="{% static 'images/lifting/cross-corner.jpg' %}" class="img-fluid">
         <p class="mt-2">Discharge Spout with Iris Protection</p>
       </div>
       <div class="col-6 col-md-2">
-        <img src="images/lifting/double-stevedore-steps.jpg" class="img-fluid">
+        <img src="{% static 'images/lifting/double-stevedore-steps.jpg' %}" class="img-fluid">
         <p class="mt-2">Discharge Spout with Petal Closure</p>
       </div>
       <div class="col-6 col-md-2">
-        <img src="images/lifting/hood-lift.jpg" class="img-fluid">
+        <img src="{% static 'images/lifting/hood-lift.jpg' %}" class="img-fluid">
         <p class="mt-2">Discharge Spout with Petal Closure</p>
       </div>
       <div class="col-6 col-md-2">
-        <img src="images/lifting/side-seems-115x165-1.jpg" class="img-fluid">
+        <img src="{% static 'images/lifting/side-seems-115x165-1.jpg' %}" class="img-fluid">
         <p class="mt-2">Discharge Spout
 </p>
       </div>
       <div class="col-6 col-md-2">
-        <img src="images/lifting/single-stevedore-strap.jpg" class="img-fluid">
+        <img src="{% static 'images/lifting/single-stevedore-strap.jpg' %}" class="img-fluid">
         <p class="mt-2">Full Drop Bottom
 </p>
       </div>
       <div class="col-6 col-md-2">
-        <img src="images/lifting/sleeve-lift.jpg" class="img-fluid">
+        <img src="{% static 'images/lifting/sleeve-lift.jpg' %}" class="img-fluid">
         <p class="mt-2">Quick Discharge / Conical base
 </p>
       </div>
@@ -116,32 +116,32 @@
   <div class="tab-pane fade" id="filling" role="tabpanel">
     <div class="row text-center g-3">
       <div class="col-6 col-md-2">
-        <img src="images/Filling & Closure/Duffel-Top1.png" class="img-fluid">
+        <img src="{% static 'images/Filling & Closure/Duffel-Top1.png' %}" class="img-fluid">
         <p class="mt-2">Open Top With Hem
 </p>
       </div>
       <div class="col-6 col-md-2">
-        <img src="images/Filling & Closure/Filling-Spout.png" class="img-fluid">
+        <img src="{% static 'images/Filling & Closure/Filling-Spout.png' %}" class="img-fluid">
         <p class="mt-2">Tie Down Flap
 </p>
       </div>
       <div class="col-6 col-md-2">
-        <img src="images/Filling & Closure/Open-Top-Tightening-Holes.png" class="img-fluid">
+        <img src="{% static 'images/Filling & Closure/Open-Top-Tightening-Holes.png' %}" class="img-fluid">
         <p class="mt-2">Duffel Top
 </p>
       </div>
       <div class="col-6 col-md-2">
-        <img src="images/Filling & Closure/Open-Top-With-Draw-Cord.png" class="img-fluid">
+        <img src="{% static 'images/Filling & Closure/Open-Top-With-Draw-Cord.png' %}" class="img-fluid">
         <p class="mt-2">Open Top & Tightening Holes
 </p>
       </div>
       <div class="col-6 col-md-2">
-        <img src="images/Filling & Closure/Open-Top-With-Hem.png" class="img-fluid">
+        <img src="{% static 'images/Filling & Closure/Open-Top-With-Hem.png' %}" class="img-fluid">
         <p class="mt-2">Open Top With Draw Cord
 </p>
       </div>
       <div class="col-6 col-md-2">
-        <img src="images/Filling & Closure/Tie-Down-Flap.png" class="img-fluid">
+        <img src="{% static 'images/Filling & Closure/Tie-Down-Flap.png' %}" class="img-fluid">
         <p class="mt-2">Filling Spout
 </p>
       </div>
@@ -152,31 +152,31 @@
   <div class="tab-pane fade" id="discharge" role="tabpanel">
     <div class="row text-center g-3">
       <div class="col-6 col-md-2">
-        <img src="images/Discharge/Discharge-Spout.gif" class="img-fluid">
+        <img src="{% static 'images/Discharge/Discharge-Spout.gif' %}" class="img-fluid">
         <p class="mt-2">Spout Bottom</p>
       </div>
       <div class="col-6 col-md-2">
-        <img src="images/Discharge/Discharge-Spout-with-Iris-Protection.gif" class="img-fluid">
+        <img src="{% static 'images/Discharge/Discharge-Spout-with-Iris-Protection.gif' %}" class="img-fluid">
         <p class="mt-2">Plain Bottom</p>
       </div>
       <div class="col-6 col-md-2">
-        <img src="images/Discharge/Discharge-Spout-with-Petal-Closure.gif" class="img-fluid">
+        <img src="{% static 'images/Discharge/Discharge-Spout-with-Petal-Closure.gif' %}" class="img-fluid">
         <p class="mt-2">Full Drop Bottom</p>
       </div>
       <div class="col-6 col-md-2">
-        <img src="images/Discharge/Discharge-Spout-with-Petal-Closure1.gif" class="img-fluid">
+        <img src="{% static 'images/Discharge/Discharge-Spout-with-Petal-Closure1.gif' %}" class="img-fluid">
         <p class="mt-2">Conical Bottom</p>
       </div>
        <div class="col-6 col-md-2">
-        <img src="images/Discharge/Discharge-Spout-with-Protection-Flap.gif" class="img-fluid">
+        <img src="{% static 'images/Discharge/Discharge-Spout-with-Protection-Flap.gif' %}" class="img-fluid">
         <p class="mt-2">Conical Bottom</p>
       </div>
        <div class="col-6 col-md-2">
-        <img src="images/Discharge/Full-Drop-Bottom.gif" class="img-fluid">
+        <img src="{% static 'images/Discharge/Full-Drop-Bottom.gif' %}" class="img-fluid">
         <p class="mt-2">Conical Bottom</p>
       </div>
        <div class="col-6 col-md-2">
-        <img src="images/Discharge/Quick-Discharge-Conical-base.gif"class="img-fluid">
+        <img src="{% static 'images/Discharge/Quick-Discharge-Conical-base.gif' %}"class="img-fluid">
         <p class="mt-2">Conical Bottom</p>
       </div>
     </div>
@@ -186,7 +186,7 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="{% static 'js/script.js' %}"></script>
 
 <script>
   document.addEventListener('DOMContentLoaded', function () {
