--- a/templates/pp-woven-ground-cover.html
+++ b/templates/pp-woven-ground-cover.html
@@ -40,7 +40,7 @@
 
     </div>
     <div class="col-md-3">
-      <img src="{% static 'images/PP-GROUND-COVER.jpg' %}" alt="PP GROUND COVER" class="img-fluid mb-3">
+      <img src="{% static 'images/PP-GROUND-COVER_0.jpg' %}" alt="PP GROUND COVER" class="img-fluid mb-3">
       <div class="row row-cols-2 g-2">
         <div class="col"><img src="{% static 'images/PP-WOVEN-GROUND-COVER.jpg' %}" alt="PP WOVEN GROUND COVER" class="img-fluid"></div>
         <div class="bg-primary text-white py-2 fw-semibold">PP WOVEN GROUND COVER</div>
